# sizes

./: .gitignore  README.md
backend/: Cargo.toml  tauri.conf.json
backend/sizes/: Cargo.toml
backend/sizes/src/: cmd.rs  conf.rs  lib.rs  scandir.rs
backend/sizes/src/db/: dirstat.rs  mod.rs  scanresult.rs
backend/sizes/src/kvstore/: mod.rs
backend/sizes/src/rocksdb/: mod.rs  property.rs
backend/sizes/src/scan/: mod.rs
backend/sizes/src/task/: mod.rs
backend/sizes/tests/: db_tests.rs  misc_tests.rs  rocksdb_tests.rs  scan_tests.rs
backend/sizes/tests/common/: mod.rs
backend/src/: cmds.rs  controller.rs  main.rs
frontend/: build.gradle.kts  settings.gradle.kts
frontend/composeApp/: build.gradle.kts
frontend/composeApp/src/androidMain/kotlin/cid/zhaohua/frontend/: MainActivity.kt  Platform.android.kt
frontend/composeApp/src/commonMain/kotlin/cid/zhaohua/frontend/: App.kt  Greeting.kt  Platform.kt
frontend/composeApp/src/commonMain/kotlin/cid/zhaohua/frontend/ktorfit/: SizesApi.kt  api.kt
frontend/composeApp/src/commonMain/kotlin/cid/zhaohua/frontend/ui/: Common.kt  Datamodels.kt  Drawer.kt  Scaffold.kt  TopNavBar.kt
frontend/composeApp/src/commonMain/kotlin/cid/zhaohua/frontend/ui/components/jsontable/: Datamodel.kt  Main.kt
frontend/composeApp/src/commonMain/kotlin/cid/zhaohua/frontend/ui/pages/: Settings.kt
frontend/composeApp/src/commonTest/kotlin/cid/zhaohua/frontend/: ComposeAppCommonTest.kt
frontend/composeApp/src/iosMain/kotlin/cid/zhaohua/frontend/: MainViewController.kt  Platform.ios.kt
frontend/composeApp/src/jsMain/kotlin/cid/zhaohua/frontend/: Platform.js.kt
frontend/composeApp/src/jvmMain/kotlin/cid/zhaohua/frontend/: Platform.jvm.kt  main.kt
frontend/composeApp/src/wasmJsMain/kotlin/cid/zhaohua/frontend/: Platform.wasmJs.kt
frontend/composeApp/src/webMain/kotlin/cid/zhaohua/frontend/: main.kt
frontend/composeApp/src/webMain/resources/: index.html
frontend/gradle/: libs.versions.toml
frontend/iosApp/Configuration/: Config.xcconfig
frontend/iosApp/iosApp.xcodeproj/: project.pbxproj
