[dependencies]

tauri = { features = [], version = "2.8.5" }

rocket =  { features = ["json"], version = "0.5.1" }
serde = { features = ['derive'], version = "1.0.228" }
serde_json = { version = "1.0.145", features = [] }

sizes = { path = "sizes" }

[build-dependencies]
tauri-build = { features = [], version = "2.4.1" }

[features]
custom-protocol = ["tauri/custom-protocol"]

[package]
authors = ["zhaohua"]
default-run = "app"
description = "sizes"
edition = "2021"
license = ""
name = "app"
repository = ""
version = "0.0.1"

[workspace]
members = ["sizes"]
