[dependencies]
  futures = "0.3.31"
  getopts = "0.2.24"
  kanal = "0.1.1"
  rocket = { workspace = true }

  serde = {features = ['derive'], workspace = true }
  serde_json = { workspace = true}
  tokio =  { features = ['sync', 'rt', 'rt-multi-thread', 'macros', 'time'], workspace = true }

  rocksdb = "0.24.0"

[dev-dependencies]
  testcontainers  = "0.25.0"

[package]
  edition = '2021'
  name = 'sizes'
  version = '0.0.1'
